<resources>
    <string name="app_name">Enecuum Wallet</string>
    <string name="new_account">New account</string>
    <string name="sign_in">sign in</string>
    <string name="next">next</string>
    <string name="create_your_pin">Create your PIN</string>
    <string name="confirm">Confirm PIN</string>
    <string name="pin_creation">PIN creation</string>
    <string name="backup_file">Backup file</string>
    <string name="select_dir">Select directory</string>
    <string name="key_copied_to_clipboard">Key copied to clipboard!</string>
    <string name="sharing_key_finished">You have shared key</string>
    <string name="skip_dialog_message">Are you sure want to skip this step?</string>
    <string name="account_registration_finished">Congratulations!\n Your wallet has created</string>
    <string name="start_working">Start working</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="enter_your_seed_phrase">Enter your seed phrase:</string>
    <string name="seed_phrase">Remember words</string>
    <string name="change_pin">Change PIN</string>
    <string name="restore_pin">Restore PIN</string>
    <string name="words_left">words left:</string>
    <string name="save">Save</string>
    <string name="create_seed_title">Seed creation</string>
    <string name="remember_seed">Remember your seed phrase:</string>
    <string name="my_wallet">My wallet</string>
    <string name="balance">Balance</string>
    <string name="karma">Karma</string>
    <string name="points">Points</string>
    <plurals name="percent_plural">
        <item quantity="other">Percent %1$f</item>
    </plurals>
    <string name="karma_percent">Karma percent</string>
    <string name="tokens_and_tickets">Tokens and Tickets</string>
    <string name="transactions_history">Microblocks history</string>
    <string name="tokens">Tokens</string>
    <string name="jettons">Tickets</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="address">Address</string>
    <string name="amount">Amount</string>
    <string name="send_max">Send MAX.</string>
    <string name="your_balance">Your balance:</string>
    <string name="confirm_send">Confirm send</string>
    <string name="you_are_going_to_send">You are going to send:</string>
    <string name="to_address">To address</string>
    <string name="send_history">Transactions History</string>
    <string name="receive_history">Receive History</string>
    <string name="text_copied">text copied</string>
    <string name="use_qr_code">Use QR code</string>
    <string name="your_current_enq_address">Your current ENQ address:</string>
    <string name="settings">Settings</string>
    <string name="backup_actions_settings">Backup actions settings</string>
    <string name="change_pin_description">Change your PIN code</string>
    <string name="about_app">About app</string>
    <string name="about_app_description">Terms, privacy policy, whitepaper etc.</string>
    <string name="enter_current_pin">Enter current PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="wrong_pin">Wrong PIN number</string>
    <string name="pin_not_equals">PIN not equals</string>
    <string name="pin_changed">Your PIN has been changed</string>
    <string name="save_description">Save crypto key to file</string>
    <string name="copy_description">Copy key to clipboard</string>
    <string name="share_description">Share key on the Web</string>
    <string name="backup_actions">Backup actions</string>
    <string name="share">Share</string>
    <string name="key_backup_finished">Key backup finished</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="terms">Terms</string>
    <string name="show"><u>Show</u></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="white_paper" translatable="false">White Paper</string>
    <string name="mining_is_working">Mining is working</string>
    <string name="mining">Mining</string>
    <string name="scan">Scan</string>
    <string name="mining_has_ended">Mining has ended</string>
    <string name="join">Join</string>
    <string name="poa_member">Team Member</string>
    <string name="team_lead">Team Leader</string>
    <string name="hash_rate">Rate %d/sec</string>
    <string name="total_balance">Total Balance %d ENQ</string>
    <string name="stop">Stop</string>
    <string name="mining_history">Mining History</string>
    <string name="verificator">Back Verificator</string>
    <string name="custom_bn">Custom Boot Node</string>
    <string name="start_mining">Start activity</string>
    <string name="stop_mining">Stop activity</string>
    <string name="connection_error">Connection error</string>
    <string name="coming_soon">Coming soon</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="fragment_settings_custom_team_node">Custom team node</string>
    <string name="fragment_settings_bootNode_description">Network connection settings</string>
    <string name="fragment_settings_about_my_wallet">Account information</string>
    <string name="fragment_settings_main_otp">OTP</string>
    <plurals name="team_members">
        <item quantity="other">%1$d team members</item>
    </plurals>
</resources>
