<com.sothree.slidinguppanel.SlidingUpPanelLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context="com.enecuum.androidapp.ui.fragment.send_finish.SendFinishFragment"
android:id="@+id/mainLayout"
android:orientation="vertical"
android:gravity="bottom"
app:umanoPanelHeight="127dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="127dp">
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@android:color/white"
        android:lineSpacingExtra="14sp"
        android:gravity="center_horizontal"
        android:text="@string/you_are_going_to_send"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_marginTop="38dp"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:lineSpacingExtra="10sp"
        android:text="@string/to_address"
        />
    <TextView
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@android:color/white"
        tools:text="5Kb8kLL6TsZZY36hWXMssSzNydYXYB9"
        android:id="@+id/addressText"
        />
    <TextView
        android:layout_marginTop="33dp"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:lineSpacingExtra="10sp"
        android:text="@string/amount"
        />
    <TextView
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@android:color/white"
        tools:text="8.00000000 ENQ"
        android:id="@+id/amountCurrency"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:textColor="@color/standard_button_text"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/confirm_send"
        android:letterSpacing="0.04"
        android:id="@+id/send"
        android:background="@drawable/standard_button_background"
        android:layout_marginBottom="22dp"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/black_87"
        android:lineSpacingExtra="10sp"
        android:text="@string/send_history"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_marginBottom="7dp"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/transactionsHistory"/>
</LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>