<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enecuum.androidapp.ui.fragment.settings_main.SettingsMainFragment"
    android:layout_marginTop="18dp"
    tools:background="@color/navy"
    android:orientation="vertical"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">
        <TextView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/changePin"
            android:text="@string/change_pin"
            />
        <ImageView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/changePinInfo"/>
    </LinearLayout>
    <TextView
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:text="@string/change_pin_description"
        android:id="@+id/changePinDescription"
        android:visibility="gone"
        android:layout_marginBottom="13dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">
        <TextView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/backupActions"
            android:text="@string/backup_actions"
            />
        <ImageView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/backupInfo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
    </LinearLayout>
    <TextView
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:text="@string/backup_actions_settings"
        android:id="@+id/backupDescription"
        android:visibility="gone"
        android:layout_marginBottom="13dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">
        <TextView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/aboutApp"
            android:text="@string/about_app"
            />
        <ImageView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/aboutInfo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
    </LinearLayout>
    <TextView
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:text="@string/about_app_description"
        android:id="@+id/aboutDescription"
        android:visibility="gone"
        android:layout_marginBottom="13dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
</LinearLayout>
