<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enecuum.androidapp.ui.fragment.create_seed.CreateSeedFragment"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/remember_seed"
    android:gravity="center"
    android:textSize="18sp"
    android:textColor="@android:color/white"
    android:id="@+id/caption"
    />
    <EditText

        android:textSize="16sp"
        android:lineSpacingExtra="8sp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:hint="@string/seed_phrase"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="textNoSuggestions|textVisiblePassword|textMultiLine"
        android:editable="false"
        android:id="@+id/seed"
        android:lines="3"
        android:minLines="3"
        android:imeOptions="actionDone"
        android:paddingTop="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:lineSpacingExtra="10sp"
        android:textColor="@color/white_87"
        android:id="@+id/seedHint"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:enabled="false"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:textColor="@color/blue_button_text"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:letterSpacing="0.04"
        android:background="@drawable/blue_button_background"
        android:layout_marginBottom="14dp"/>
</LinearLayout>
