<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enecuum.androidapp.ui.fragment.settings_backup.SettingsBackupFragment"
    tools:background="@color/navy"
    android:layout_marginTop="18dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">
        <TextView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/save"
            android:text="@string/save"
            />
        <ImageView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/saveInfo"/>
    </LinearLayout>
    <TextView
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:text="@string/save_description"
        android:id="@+id/saveDescription"
        android:visibility="gone"
        android:layout_marginBottom="13dp"
        />
    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_indigo_four"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">
        <TextView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/copy"
            android:text="@android:string/copy"
            />
        <ImageView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/copyInfo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
    </LinearLayout>
    <TextView
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:text="@string/copy_description"
        android:id="@+id/copyDescription"
        android:visibility="gone"
        android:layout_marginBottom="13dp"
        />
    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_indigo_four"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp">
        <TextView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:id="@+id/share"
            android:text="@string/share"
            />
        <ImageView
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:id="@+id/shareInfo"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
    </LinearLayout>
    <TextView
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white_87"
        android:text="@string/share_description"
        android:id="@+id/shareDescription"
        android:visibility="gone"
        android:layout_marginBottom="13dp"
        />
    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_indigo_four"/>-->
</LinearLayout>
