<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enecuum.androidapp.ui.fragment.settings_about_app.SettingsAboutAppFragment"
    android:paddingTop="18dp"
    android:orientation="vertical">
    <RelativeLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="13dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:text="@string/version"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            tools:text="0.1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="230dp"
            android:id="@+id/versionText"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
    <RelativeLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="13dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:text="@string/website"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/dark_sky_blue"
            android:lineSpacingExtra="8sp"
            android:text="@string/enecuum_com"
            android:layout_alignParentStart="true"
            android:layout_marginStart="230dp"
            android:id="@+id/site"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
    <RelativeLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="13dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:text="@string/terms"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/dark_sky_blue"

            android:lineSpacingExtra="8sp"
            android:text="@string/show"
            android:layout_alignParentStart="true"
            android:layout_marginStart="230dp"
            android:id="@+id/terms"

            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
    <RelativeLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="13dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:text="@string/privacy_policy"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/dark_sky_blue"
            android:lineSpacingExtra="8sp"
            android:text="@string/show"
            android:layout_alignParentStart="true"
            android:layout_marginStart="230dp"
            android:id="@+id/privacy"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_slate_blue"/>
    <RelativeLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="13dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:lineSpacingExtra="8sp"
            android:text="@string/white_paper"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/dark_sky_blue"

            android:lineSpacingExtra="8sp"
            android:text="@string/show"
            android:layout_alignParentStart="true"
            android:layout_marginStart="230dp"
            android:id="@+id/whitePaper"
            />
    </RelativeLayout>

</LinearLayout>
