<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context="com.enecuumwallet.androidapp.ui.fragment.send_parameters.SendParametersFragment"
    android:orientation="vertical"
    android:gravity="bottom"
    android:id="@+id/slidingLayout"
    app:umanoPanelHeight="127dp"
    android:background="@color/navy">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/viewPager">
        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabLayout"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@color/white__70"
            app:tabIndicatorColor="@color/cerulian"/>
    </android.support.v4.view.ViewPager>
    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:textColor="@color/standard_button_text"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/send"
        android:letterSpacing="0.04"
        android:enabled="false"
        android:id="@+id/send"
        android:background="@drawable/standard_button_background"
        android:layout_marginBottom="22dp"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/black_87"
            android:lineSpacingExtra="14sp"
            android:text="@string/send_history"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:paddingBottom="1dp"
            android:layout_centerInParent="true"
            android:id="@+id/historyTitle"
            />
        <ImageView
            android:layout_toRightOf="@+id/historyTitle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/show_history"
            android:id="@+id/panelHint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coming_soon"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/historyTitle"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/transactionsHistory"/>


</LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>